updated file, initial setup completed, project ready for delivery

--- a/index.html
+++ b/index.html
@@ -7,9 +7,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Codecademy Design System</title>
   </head>
   <body>
-    <p></p>
+    <h1>Codecademy Design System - Clear Grow Shine</h1>
+    <section class="one">
+      <h2 class="title">Colors</h2>
+      <div class="box box-one">
+        <h3>Background</h3>
+        <p>#F1F8FA</p>
+      </div>
+      <div class="box box-two">
+        <h3>Main accent</h3>
+        <p>#E4B445</p>
+      </div>
+      <div class="box box-three">
+        <h3>Secondary accent</h3>
+        <p>#507F85</p>
+      </div>
+    </section>
+    <section class="two">
+      <h2 class="title">Fonts</h2>
+      <div class="box">
+        <h3 class="subtitle heading">Playfair Display</h3>
+        <p class="regular">The quick brown fox jumps over the lazy dog.</p>
+        <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+        <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+      </div>
+      <div class="box">
+        <h3 class="subtitle text">Raleway</h3>
+        <p class="regular">The quick brown fox jumps over the lazy dog.</p>
+        <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+        <p class="italic">The quick brown fox jumps over the lazy dog.</p>
+      </div>
+    </section>
+    <section class="three">
+      <h2 class="title">Text styles</h2>
+      <div class="box">
+        <h1 class="h1style">H1: Main heading</h1>
+        <ul>
+          <li>Font-family: Playfair Display</li>
+          <li>Font-size: 56px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+      <div class="box">
+        <h2 class="h2style">H2: Secondary heading</h2>
+        <ul>
+          <li>Font-family: Playfair Display</li>
+          <li>Font-size: 40px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+      <div class="box">
+        <h3 class="h3style">H3: Subheading</h3>
+        <ul>
+          <li>Font-family: Playfair Display</li>
+          <li>Font-size: 24px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+      <div class="box">
+        <h4 class="h4style">H4: Emphasized text (buttons etc.)</h4>
+        <ul>
+          <li>Font-family: Raleway</li>
+          <li>Font-size: 20px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+      <div class="box">
+        <p class="pstyle">P: Regular paragraph text</p>
+        <ul>
+          <li>Font-family: Raleway</li>
+          <li>Font-size: 16px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+      <div class="box">
+        <p class="labelstyle">P.label: Label text</p>
+        <ul>
+          <li>Font-family: Raleway</li>
+          <li>Font-size: 14px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+      <div class="box">
+        <p class="smalllabelstyle">P.labelsmall: Small label text</p>
+        <ul>
+          <li>Font-family: Raleway</li>
+          <li>Font-size: 12px</li>
+          <li>Font-weight: 400</li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
